--- a/DataManager/ProgressBarTask.xaml
+++ b/DataManager/ProgressBarTask.xaml
@@ -7,9 +7,9 @@
         mc:Ignorable="d"
         Title="ProgressBarTask" Height="100" Width="300">
     <Canvas Background="DimGray" Width="300" Height="100">
-        <ProgressBar Height="25" Canvas.Left="20" Canvas.Top="33" Width="190" Minimum="0" Name="pbstatus" IsIndeterminate="True" />
-        <Button x:Name="buttonCancel" Content="Cancel" Canvas.Left="224" Canvas.Top="33" Width="50" Height="25" Click="CancelButton_Click" />
-        <TextBlock x:Name="workStatus" Height="15" Width="150" Canvas.Left="23" RenderTransformOrigin="0.488,-0.539" Text="Work in Progress..." Canvas.Top="5" />
+        <ProgressBar Height="8" Canvas.Top="47" Width="178" Minimum="0" Name="pbstatus" IsIndeterminate="True" Canvas.Left="22" />
+        <Button x:Name="buttonCancel" Content="Cancel" Canvas.Left="205" Canvas.Top="40" Width="38" Height="20" Click="CancelButton_Click" RenderTransformOrigin="0.618,0.958" FontSize="10" FontWeight="Bold" FontStretch="Expanded" />
+        <TextBlock x:Name="workStatus" Height="37" Width="280" Canvas.Left="10" RenderTransformOrigin="0.488,-0.539" Text="Work in Progress..." Canvas.Top="5" TextWrapping="Wrap"/>
 
     </Canvas>
 </Window>
