--- a/DataManager/UI_contentPages/Standard.xaml
+++ b/DataManager/UI_contentPages/Standard.xaml
@@ -5,7 +5,8 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:DataManager"
       mc:Ignorable="d" 
-      d:DesignHeight="535" d:DesignWidth="350"
+      d:DesignHeight="450" d:DesignWidth="800"
+      Style="{StaticResource PageFormats}"
       Title="Standard">
 
     <Page.Resources>
