--- a/DataManager/App.xaml
+++ b/DataManager/App.xaml
@@ -13,6 +13,8 @@
             <Setter Property="Background" Value="#51555b"/>
             <Setter Property="BorderThickness" Value="0"/>
         </Style>
+        
+        <!--Page Format Style-->
         <Style x:Key="PageFormats" TargetType="{x:Type Page}">
             <Setter Property="Width" Value="350"/>
             <Setter Property="Height" Value="535"/>
