--- a/DMCoreGUI/View/StandardProgressWindow.xaml
+++ b/DMCoreGUI/View/StandardProgressWindow.xaml
@@ -23,6 +23,8 @@
 
         <Button x:Name="cancel" Content="Cancel" Grid.Column="1" Grid.Row="2" Click="CancelButton_Click"/>
         <Button x:Name="close" Content="Close" Grid.Column="3" Grid.Row="2" Click="Close_Click"/>
-        <TextBlock x:Name="output" Grid.Column="1" Grid.ColumnSpan="3" Grid.Row="1"/>
+        <ScrollViewer Grid.Column="1" Grid.ColumnSpan="3" Grid.Row="1" HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto">
+            <TextBlock x:Name="output" Text="{Binding Path=ProgressOutput}"/>
+        </ScrollViewer>
     </Grid>
 </Window>
